# TradingAlgorithm

./: .cursorignore  .gitattributes  .gitignore  .streamlitignore  README.md  STREAMLIT_CLOUD_TROUBLESHOOTING.md  TradingAlgo.sln  TradingAlgop.sln  application.py  index.txt  main.py  package_manager.py  packages.txt  pip.ini  pytest.ini  requirements.txt  root_requirements.txt  run_streamlit_app.bat  setup.sh  setup_and_run.ps1  setup_local_env.bat  setup_py39.bat  streamlit_app.py  streamlit_requirements.txt  streamlitcloud_requirements.txt  test_financial_data.py  test_yfinance_fix.py  upload_to_ec2.bat
.devcontainer/: devcontainer.json
.ebextensions/: 01_dependencies.config
.streamlit/: config.toml  secrets.toml
0_Launchers/: build_cpp_module.bat  fix_pyqt6_issue.bat  manage_environment.bat  quick_launch_gui.bat  run_enhanced_flask_web.bat  run_enhanced_local_gui.bat  run_local_gui.bat  run_local_gui.py  run_local_gui_python.bat  run_streamlit_app.bat  setup_and_run.bat  setup_and_run.ps1  setup_and_run.py  setup_cloud_compatible.bat  setup_local_env.bat  setup_py39.bat
1_High_Performance_Module_(C++)/: 1_High_Performance_Module_(C++).vcxproj  1_High_Performance_Module_(C++).vcxproj.filters  CMakeLists.txt  bindings.cpp  engine.cpp  engine.h  requirements.txt  setup.py
2_Orchestrator_And_ML_(Python)/: .env  2_Orchestrator_And_ML_(Python).pyproj  config.py  data_fetcher.py  live_trader.py  market_analyzer.py  requirements.txt  train_model.py
2_Orchestrator_And_ML_Python/: main.py  ml_dev_requirements.txt  requirements.txt
aws logs/: cron  messages
(+198 files in other folders)
